--- a/src/app/bmx/components/project-list/project-list.component.html
+++ b/src/app/bmx/components/project-list/project-list.component.html
@@ -84,7 +84,7 @@
                         </button>
                     </td>
                 </ng-container>
-                <ng-container matColumnDef="Delete">
+                <ng-container matColumnDef="Delete" *ngIf="userRole == 'admin'">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 3.33%;"> </th>
                     <td mat-cell *matCellDef="let element">
                         <button mat-icon-button style="color: #bc488a;"
