fix css inline files

--- a/src/app/bsr-mobile/edit-name.html
+++ b/src/app/bsr-mobile/edit-name.html
@@ -1,25 +1,33 @@
-<div *ngIf="infoMessage">
-    <form name="loginForm" [formGroup]="loginForm" novalidate>
+<div class="container-modal" style=" display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+margin: 34px;
+border-radius: 10px;
+" *ngIf="infoMessage">
+    <form  name="loginForm" [formGroup]="loginForm" novalidate>
 
 
         <div *ngIf="!isDeleting" class="mat-h2" style="text-align: center;">Are you sure you want to delete? </div>
         <div *ngIf="!isDeleting" class="mat-h1" style="text-align: center;color: #004684;">{{editName}}</div>
         <div *ngIf="!isDeleting" class="mat-h4">If you delete this name, it will be removed permanently.</div>
 
-        <mat-form-field *ngIf="isDeleting" appearance="outline" style="max-width: 350px; min-width: 260px;">
-            <mat-label>Edit Name</mat-label>
-            <input matInput type="name" placeholder="name" formControlName="name">
-        </mat-form-field>
-        <br>
-        <mat-form-field *ngIf="isDeleting" appearance="outline" style="max-width: 350px; min-width: 260px;">
-            <mat-label>Rationale</mat-label>
-            <input matInput type="text" placeholder="rationale" formControlName="rationale">
-        </mat-form-field>
-        <br>
+        <div class="columns-input" style="display: flex; flex-direction: column;">
+            <mat-form-field *ngIf="isDeleting" appearance="outline" class="responsive-input">
+              <mat-label>Edit Name</mat-label>
+              <input matInput type="name" placeholder="name" formControlName="name">
+            </mat-form-field>
+            
+            <mat-form-field *ngIf="isDeleting" appearance="outline" class="responsive-input">
+              <mat-label>Rationale</mat-label>
+              <input matInput type="text" placeholder="rationale" formControlName="rationale">
+            </mat-form-field>
+          </div>
+          
 
-        <div class="row" style="text-align: center;">
+        <div class="row" style="margin-top: -8px; text-align: center; justify-content: center;">
 
-            <div class="" fxFlex fxLayoutAlign="center center">
+            <div class="row-icon" style="display: flex; gap: 56px;" fxFlex fxLayoutAlign="center center">
 
                 <div fxFlex *ngIf="isDeleting">
                     <button (click)="buttonOption('delete')" class="delete-update-buttons" mat-mini-fab
@@ -76,16 +84,20 @@
 
     </form>
 </div>
-<div *ngIf="!infoMessage">
+<div class="modal-container-help" style=" display: block;
+padding: 24px;
+
+" *ngIf="!infoMessage">
     <div class="mat-h4" style="text-align: center;">Help</div>
     <hr>
-    <div class="mat-h3" style="text-align: center;color: #004684;">Touch or click a name to edit or delete. v0.4
+    <div class="mat-h3" style="text-align: center;color: #004684;">Touch or click a name to edit or delete. v0.5.05
     </div>
 
-    <div fxLayoutAlign="end end">
+    <div class="end-button" style="display: flex;justify-content: flex-end;" fxLayoutAlign="end end">
         <button (click)="buttonOption('dismiss')" class="refreshbutton" mat-mini-fab style="font-size: 8px;"
             color="success" aria-label="icon">
             <mat-icon>cancel</mat-icon>
         </button>
     </div>
 </div>
+
