--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.html
@@ -1,12 +1,8 @@
 <div *ngIf="showDialog"><app-survey-dialog (onConfirm)="confirmAction()" (onCancel)="closeDialog()"
         [dialogText]="dialogText"></app-survey-dialog>
 </div>
-<div *ngIf="showCreationModalVideo && bmxClientPageOverview" id="myModal" class="modal-video"
-    style="display: flex;flex-direction: column;gap: 2px;">
-    <!-- <label class="container-checkbox">Don't show again
-  <input (click)="saveSelection()" type="checkbox" value="Bike" #modalChecked>
-  <span class="checkmark">&#x2714;</span>
-</label> -->
+<div *ngIf="showCreationModalVideo && bmxClientPageOverview" id="myModal" class="modal-video">
+
     <div class="modal-content">
         <video src='{{CREATION_VIDEO_PATH}}' controls></video>
 
@@ -14,101 +10,92 @@
     <button class="btn btn-raised close-modal" (click)="showCreationModalVideo=false">close</button>
 </div>
 <!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  SETTINGS ICONS  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
-<div *ngIf="bmxClientPageOverview" style="display: flex;
-flex-direction: row-reverse;
-justify-content: end;
-top: -30px;
-right: 50px;border: 2px dashed #324395;padding-right: 10px;background: #ffffffd9;
-position: absolute;height: 54px;align-items: center">
+<div *ngIf="bmxClientPageOverview" class="settings-icons">
 
     <!-- ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺RAGE INPUTS FOR COLUMN SETTINGS ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺ -->
 
-    <div *ngIf="isColumnResizerOn && bmxClientPageOverview" class="" style="    display: flex;
-flex-direction: row;
-justify-content: start;background: #ffffffd9;
-gap: 0px;position: absolute;left: -713px;z-index: 1;border: 2px dashed #324395;">
+    <div *ngIf="isColumnResizerOn && bmxClientPageOverview" class="column-resizer" >
         <!-- NAME CANDIATES -->
-        <div style="display: flex;flex-direction: column;align-items: center;">
-            <p style="margin: 0 0 -12px;color: #324395;">candidates
+        <div class="settings-option">
+            <p class="settings-label">candidates
             </p>
-            <input type="range" style="margin: 20px;width: 50px;"
+            <input type="range" class="slider-font-size"
                 [(ngModel)]="bmxItem.componentSettings[0].nameCandidatesWidth" class="slider-font-size"
                 tickInterval="0.5" min="50" max="400" [value]="bmxItem.componentSettings[0].nameCandidatesWidth">
         </div>
 
         <!-- RATIONALE -->
-        <div style="display: flex;flex-direction: column;align-items: center;">
-            <p style="margin: 0 0 -12px;color: #324395;">rationale
+        <div class="settings-option">
+            <p class="settings-label">rationale
             </p>
-            <input type="range" style="margin: 20px;width: 50px;"
+            <input type="range" 
                 [(ngModel)]="bmxItem.componentSettings[0].rationalewidth" class="slider-font-size" tickInterval="0.5"
                 min="50" max="600" [value]="bmxItem.componentSettings[0].rationalewidth">
         </div>
 
         <!-- RATE -->
-        <div style="display: flex;flex-direction: column;align-items: center;">
-            <p style="margin: 0 0 -12px;color: #324395;">rate
+        <div class="settings-option">
+            <p class="settings-label">rate
             </p>
-            <input type="range" style="margin: 20px;width: 50px;" [(ngModel)]="bmxItem.componentSettings[0].rateWidth"
+            <input type="range" class="slider-font-size" [(ngModel)]="bmxItem.componentSettings[0].rateWidth"
                 class="slider-font-size" tickInterval="0.5" min="50" max="400"
                 [value]="bmxItem.componentSettings[0].rateWidth">
         </div>
 
         <!-- COMMENTS -->
-        <div style="display: flex;flex-direction: column;align-items: center;">
-            <p style="margin: 0 0 -12px;color: #324395;">comments
+        <div class="settings-option">
+            <p class="settings-label">comments
             </p>
-            <input type="range" style="margin: 20px;width: 50px;"
+            <input type="range" class="slider-font-size"
                 [(ngModel)]="bmxItem.componentSettings[0].commentsWidth" class="slider-font-size" tickInterval="0.5"
                 min="50" max="400" [value]="bmxItem.componentSettings[0].commentsWidth">
         </div>
 
         <!-- REST OF THE COLUMNS -->
-        <div style="display: flex;flex-direction: column;align-items: center;">
-            <p style="margin: 0 0 -12px;color: #324395;">other columns
+        <div class="settings-option">
+            <p class="settings-label">other columns
             </p>
-            <input type="range" style="margin: 20px;width: 50px;" [(ngModel)]="bmxItem.componentSettings[0].columnWidth"
-                class="slider-font-size" tickInterval="0.5" min="50" max="400"
+            <input type="range" class="slider-font-size" [(ngModel)]="bmxItem.componentSettings[0].columnWidth"
+               tickInterval="0.5" min="50" max="400"
                 [value]="bmxItem.componentSettings[0].columnWidth">
         </div>
 
         <!-- ROW HEIGHT -->
 
-        <div style="display: flex;flex-direction: column;align-items: center;">
-            <p style="margin: 0 0 -12px;color: #324395;">row height</p>
-            <input type="range" style="margin: 20px;width: 60px;" [(ngModel)]="bmxItem.componentSettings[0].rowHeight"
-                class="slider-font-size" tickInterval="0.5" min="-10" max="20"
+        <div class="settings-option">
+            <p class="settings-label">row height</p>
+            <input type="range" class="slider-font-size"[(ngModel)]="bmxItem.componentSettings[0].rowHeight"
+                tickInterval="0.5" min="-10" max="20"
                 [value]="bmxItem.componentSettings[0].rowHeight">
         </div>
 
         <!-- FONT -->
-        <div style="display: flex;flex-direction: column;align-items: center;">
-            <p style="margin: 0 0 -12px;color: #324395;">font size: {{bmxItem.componentSettings[0].fontSize}}</p>
-            <input type="range" style="margin: 20px;width: 50px;" [(ngModel)]="bmxItem.componentSettings[0].fontSize"
-                class="slider-font-size" tickInterval="0.1" min="2" max="50"
+        <div class="settings-option">
+            <p class="settings-label">font size: {{bmxItem.componentSettings[0].fontSize}}</p>
+            <input type="range" class="row-height-settings" [(ngModel)]="bmxItem.componentSettings[0].fontSize"
+                 tickInterval="0.1" min="2" max="50"
                 [value]="bmxItem.componentSettings[0].fontSize">
         </div>
 
         <!-- RADIO -->
-        <div *ngIf="radioColumnCounter > 1" style="display: flex;flex-direction: column;align-items: center;">
-            <p style="margin: 0 0 -12px;color: #324395;">radio</p>
-            <input type="range" style="margin: 20px;width: 50px;"
-                [(ngModel)]="bmxItem.componentSettings[0].radioColumnsWidth" class="slider-font-size" tickInterval="0.5"
+        <div *ngIf="radioColumnCounter > 1" class="settings-option">
+            <p class="settings-label">radio</p>
+            <input type="range" class="slider-font-size"
+                [(ngModel)]="bmxItem.componentSettings[0].radioColumnsWidth"  tickInterval="0.5"
                 min="50" max="100" [value]="bmxItem.componentSettings[0].radioColumnsWidth">
         </div>
     </div>
 
-    <!-- <mat-slider min="200" max="500" step="10" value="200" [(value)]="bmxItem.componentSettings[0].columnWidth"></mat-slider><p>{{bmxItem.componentSettings[0].columnWidth}}</p> -->
     <!-- ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺  END  ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺ -->
 
-    <div style="display: flex; flex-direction: row-reverse;">
+    <div class="menu-container">
         <button (click)="showMatrixMenuBmx()" mat-icon-button matTooltip="{{textToolTip}}">
-            <mat-icon style="font-size: 26px;" class="full-icon">{{iconMenuShow}}</mat-icon>
+            <mat-icon  class="full-icon">{{iconMenuShow}}</mat-icon>
         </button>
         <div *ngIf="showMatrixMenu">
             <button (click)="openDialog('undo');editSingleTableCells = false" class="add-column"
                 matTooltip="undo last change" matTooltipPosition="above" mat-icon-button aria-label="ranking">
-                <mat-icon style="font-size: 26px;" class="full-icon">undo</mat-icon>
+                <mat-icon  class="full-icon">undo</mat-icon>
             </button>
             <button (click)="selectedIndex = '';editSingleTableCells = false" class="add-column" matTooltip="cancel"
                 matTooltipPosition="above" *ngIf="i === selectedIndex" mat-icon-button>
@@ -117,37 +104,37 @@ gap: 0px;position: absolute;left: -713px;z-index: 1;border: 2px dashed #324395;"
             <button (click)="deleteRows = !deleteRows;editSingleTableCells = false"
                 [ngClass]="(!deleteRows)?'add-column':'add-column-active'" matTooltip="delete rows"
                 matTooltipPosition="above" mat-icon-button aria-label="ranking">
-                <mat-icon style="font-size: 26px;" class="full-icon">delete_outline</mat-icon>
+                <mat-icon  class="full-icon">delete_outline</mat-icon>
             </button>
             <button (click)="insertTextColumn();editSingleTableCells = false" class="add-column"
                 matTooltip="add text column" matTooltipPosition="above" mat-icon-button aria-label="ranking">
-                <mat-icon style="font-size: 26px;" class="full-icon">view_list</mat-icon>
+                <mat-icon  class="full-icon">view_list</mat-icon>
             </button>
             <button (click)="insertRow();editSingleTableCells = false" class="add-column" matTooltip="insert row"
                 matTooltipPosition="above" mat-icon-button aria-label="ranking">
-                <mat-icon style="font-size: 26px;" class="full-icon">vertical_distribute</mat-icon>
+                <mat-icon  class="full-icon">vertical_distribute</mat-icon>
             </button>
             <button (click)="dragRows = !dragRows;editSingleTableCells = false"
                 [ngClass]="(!dragRows)?'add-column':'add-column-active'" matTooltip="drag rows"
                 matTooltipPosition="above" mat-icon-button aria-label="ranking">
-                <mat-icon style="font-size: 26px;" class="full-icon">drag_indicator</mat-icon>
+                <mat-icon  class="full-icon">drag_indicator</mat-icon>
             </button>
 
             <button (click)="editSingleTableCells = !editSingleTableCells"
                 [ngClass]="(!editSingleTableCells)?'add-column':'add-column-active'" matTooltip="edit table cells"
                 matTooltipPosition="above" mat-icon-button aria-label="ranking">
-                <mat-icon style="font-size: 26px;" class="full-icon">explicit</mat-icon>
+                <mat-icon  class="full-icon">explicit</mat-icon>
             </button>
         </div>
 
         <button (click)="showCreationModalVideo=true; editSingleTableCells = false" class="add-column"
             matTooltip="see tutorial" matTooltipPosition="above" mat-icon-button aria-label="ranking">
-            <mat-icon style="font-size: 26px;" class="full-icon">video_library</mat-icon>
+            <mat-icon  class="full-icon">video_library</mat-icon>
         </button>
 
         <button (click)="insertCommentBoxColumn();editSingleTableCells = false" class="add-column"
             matTooltip="add comments column" matTooltipPosition="above" mat-icon-button aria-label="ranking">
-            <mat-icon style="font-size: 26px;" class="full-icon">wysiwyg</mat-icon>
+            <mat-icon  class="full-icon">wysiwyg</mat-icon>
         </button>
 
         <button (click)="isColumnResizerOn = !isColumnResizerOn;editSingleTableCells = false"
@@ -158,7 +145,7 @@ gap: 0px;position: absolute;left: -713px;z-index: 1;border: 2px dashed #324395;"
         <button *ngIf="uploadImagesIcon" (click)="toggleImageUploadBox();editSingleTableCells = false"
             class="add-column" matTooltip="upload Images" matTooltipPosition="above" mat-icon-button
             aria-label="ranking">
-            <mat-icon style="font-size: 26px;" class="full-icon">collections</mat-icon>
+            <mat-icon  class="full-icon">collections</mat-icon>
         </button>
         <button (click)="openWindow(i, false)" class="add-column" matTooltip="setup settings" matTooltipPosition="above"
             *ngIf="i !== selectedIndex " mat-icon-button>
@@ -166,7 +153,7 @@ gap: 0px;position: absolute;left: -713px;z-index: 1;border: 2px dashed #324395;"
         </button>
         <button (click)="toggleImageUploadBox()" class="add-column" matTooltip="uploadImages" matTooltipPosition="above"
             mat-icon-button aria-label="ranking">
-            <mat-icon style="font-size: 26px;" class="full-icon">collections</mat-icon>
+            <mat-icon  class="full-icon">collections</mat-icon>
         </button>
         <button (click)="showModalTable = true" class="add-column" matTooltip="update names" matTooltipPosition="above"
             *ngIf="i !== selectedIndex" mat-icon-button>
@@ -178,6 +165,7 @@ gap: 0px;position: absolute;left: -713px;z-index: 1;border: 2px dashed #324395;"
 
 
 <!-- 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 CONFIG BOX 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 -->
+
 <div *ngIf="i === selectedIndex" class="mat-elevation-z4" cdkDrag style="position: absolute;width: 50%;background: #fafafa;z-index: 1;top: -65px;left: 25%;border: #063074 4px solid; overflow: auto;
  max-height: 36rem;
 bottom: -2; ">
@@ -371,6 +359,7 @@ align-items: center; ">
         </div>
     </div>
 </div>
+
 <!-- 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧END CONFIG BOX 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 -->
 
 
